--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,8 @@ body {
   justify-content: center;
   align-items: center;
 }
-.authorization-section .authorization-wrapper {
+
+.authorization-wrapper {
   width: 900px;
   height: 660px;
   border-radius: 30px;
@@ -24,11 +25,12 @@ body {
   background: #fff;
 }
 @media (max-width: 900px) {
-  .authorization-section .authorization-wrapper {
+  .authorization-wrapper {
     width: 420px;
   }
 }
-.authorization-section .authorization-wrapper .authorization-form {
+
+.authorization-form {
   margin-left: 15px;
   width: 460px;
   height: 100%;
@@ -38,28 +40,28 @@ body {
   text-align: center;
 }
 @media (max-width: 900px) {
-  .authorization-section .authorization-wrapper .authorization-form {
+  .authorization-form {
     width: 100%;
     margin: 0 50px;
   }
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info {
+.authorization-form .authorization-info {
   width: 310px;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .title {
+.authorization-form .authorization-info .title {
   font-size: 36px;
   margin: 20px 0 0 0;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .subtitle {
+.authorization-form .authorization-info .subtitle {
   margin-top: 10px;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .subtitle a {
+.authorization-form .authorization-info .subtitle a {
   position: relative;
   color: #000;
   text-decoration: none;
   font-weight: 600;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .subtitle a::after {
+.authorization-form .authorization-info .subtitle a::after {
   content: "";
   position: absolute;
   bottom: -5px;
@@ -71,16 +73,15 @@ body {
   transform: scaleX(0);
   transform-origin: bottom right;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .subtitle a:hover::after, .authorization-section .authorization-wrapper .authorization-form .authorization-info .subtitle a:focus::after {
+.authorization-form .authorization-info .subtitle a:hover::after, .authorization-form .authorization-info .subtitle a:focus::after {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .social-contact {
+.authorization-form .authorization-info .social-contact {
   display: flex;
   justify-content: center;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .social-contact .social-icon {
-  cursor: pointer;
+.authorization-form .authorization-info .social-contact .social-icon {
   margin: 20px 5px;
   display: flex;
   justify-content: center;
@@ -88,43 +89,53 @@ body {
   width: 35px;
   height: 35px;
   border-radius: 20px;
-  border: 1px solid rgb(185, 185, 185);
+  border: 1px solid #dde1e4;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .divider {
+.authorization-form .authorization-info .social-contact .social-icon svg path {
+  fill: #000;
+}
+.authorization-form .authorization-info .social-contact .social-icon:hover {
+  border: 1px solid #353535;
+  transition: 0.3s ease-out;
+}
+.authorization-form .authorization-info .social-contact .social-icon:hover svg path {
+  fill: #353535;
+}
+.authorization-form .authorization-info .divider {
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .divider::before, .authorization-section .authorization-wrapper .authorization-form .authorization-info .divider::after {
+.authorization-form .authorization-info .divider::before, .authorization-form .authorization-info .divider::after {
   content: "";
   display: inline-block;
   width: 100%;
   border-top: 1px solid #7b818e;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .divider-text {
+.authorization-form .authorization-info .divider-text {
   font-weight: bold;
   color: #7b818e;
   font-size: 12px;
   font-weight: 400;
   margin: 0 15px;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .input-wrapper {
+.authorization-form .authorization-info .input-wrapper {
   display: flex;
   flex-wrap: wrap;
   text-align: left;
   margin-top: 20px;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .input-wrapper span {
+.authorization-form .authorization-info .input-wrapper label {
+  font-size: 12px;
   width: 100%;
   height: 15px;
   font-weight: 600;
   margin-bottom: 7px;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .input-wrapper .input {
-  margin-top: 5px;
+.authorization-form .authorization-info .input-wrapper .input {
   width: 100%;
-  height: 35px;
+  height: 30px;
   border-radius: 30px;
   background: #f1f1f1;
   border: none;
@@ -133,12 +144,12 @@ body {
   font-weight: 500;
   transition: color 0.3s ease;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .input-wrapper.password-input {
+.authorization-form .authorization-info .input-wrapper.password-input {
   position: relative;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .input-wrapper.password-input .password-eye-btn {
+.authorization-form .authorization-info .input-wrapper.password-input .password-eye-btn {
   position: absolute;
-  top: 28px;
+  top: 23px;
   right: 15px;
   padding: 5px;
   width: 32px;
@@ -147,11 +158,15 @@ body {
   border: none;
   cursor: pointer;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .input-wrapper.password-input .password-eye-btn .password-eye-icon {
+.authorization-form .authorization-info .input-wrapper.password-input .password-eye-btn .password-eye-icon {
+  fill: #696969;
   width: 18px;
   height: 18px;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .sign-in__btn {
+.authorization-form .authorization-info .input-wrapper.password-input .password-eye-btn .password-eye-icon:hover {
+  background-image: red;
+}
+.authorization-form .authorization-info .sign-in__btn {
   margin-top: 20px;
   border: none;
   outline: none;
@@ -163,31 +178,34 @@ body {
   font-weight: 600;
   cursor: pointer;
 }
-.authorization-section .authorization-wrapper .authorization-form .authorization-info .sign-in__btn:active {
+.authorization-form .authorization-info .sign-in__btn:hover {
   background: #fbc400;
   color: #000;
+  transition: 0.3s ease-out;
 }
-.authorization-section .authorization-wrapper .image-block {
+
+.image-block {
   padding: 15px;
   width: 460px;
   height: 640px;
   border-radius: 20px;
 }
 @media (max-width: 900px) {
-  .authorization-section .authorization-wrapper .image-block {
+  .image-block {
     display: none;
   }
 }
-.authorization-section .authorization-wrapper .forgot-password {
+
+.forgot-password {
   margin-top: 20px;
 }
-.authorization-section .authorization-wrapper .forgot-password a {
+.forgot-password a {
   position: relative;
   color: #000;
   text-decoration: none;
   font-weight: 600;
 }
-.authorization-section .authorization-wrapper .forgot-password a::after {
+.forgot-password a::after {
   content: "";
   position: absolute;
   bottom: -5px;
@@ -199,7 +217,7 @@ body {
   transform: scaleX(0);
   transform-origin: bottom right;
 }
-.authorization-section .authorization-wrapper .forgot-password a:hover::after, .authorization-section .authorization-wrapper .forgot-password a:focus::after {
+.forgot-password a:hover::after, .forgot-password a:focus::after {
   transform: scaleX(1);
   transform-origin: bottom left;
 }/*# sourceMappingURL=style.css.map */
