--- a/styles/style.css
+++ b/styles/style.css
@@ -7,15 +7,14 @@ body {
   font-style: normal;
 }
 
-.authorization-section {
+.authorization {
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-.authorization-wrapper {
+.authorization__wrapper {
   width: 900px;
   height: 660px;
   border-radius: 30px;
@@ -25,12 +24,11 @@ body {
   background: #fff;
 }
 @media (max-width: 900px) {
-  .authorization-wrapper {
+  .authorization__wrapper {
     width: 420px;
   }
 }
-
-.authorization-form {
+.authorization__form {
   margin-left: 15px;
   width: 460px;
   height: 100%;
@@ -40,28 +38,28 @@ body {
   text-align: center;
 }
 @media (max-width: 900px) {
-  .authorization-form {
+  .authorization__form {
     width: 100%;
     margin: 0 50px;
   }
 }
-.authorization-form .authorization-info {
+.authorization__form__info {
   width: 310px;
 }
-.authorization-form .authorization-info .title {
+.authorization__form .authorization__title {
   font-size: 36px;
   margin: 20px 0 0 0;
 }
-.authorization-form .authorization-info .subtitle {
+.authorization__form .authorization__subtitle {
   margin-top: 10px;
 }
-.authorization-form .authorization-info .subtitle a {
+.authorization__form .authorization__subtitle a {
   position: relative;
   color: #000;
   text-decoration: none;
   font-weight: 600;
 }
-.authorization-form .authorization-info .subtitle a::after {
+.authorization__form .authorization__subtitle a::after {
   content: "";
   position: absolute;
   bottom: -5px;
@@ -73,15 +71,15 @@ body {
   transform: scaleX(0);
   transform-origin: bottom right;
 }
-.authorization-form .authorization-info .subtitle a:hover::after, .authorization-form .authorization-info .subtitle a:focus::after {
+.authorization__form .authorization__subtitle a:hover::after, .authorization__form .authorization__subtitle a:focus::after {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
-.authorization-form .authorization-info .social-contact {
+.authorization__form .authorization__social-contact {
   display: flex;
   justify-content: center;
 }
-.authorization-form .authorization-info .social-contact .social-icon {
+.authorization__form .authorization__social-contact .authorization__social-icon {
   margin: 20px 5px;
   display: flex;
   justify-content: center;
@@ -91,49 +89,50 @@ body {
   border-radius: 20px;
   border: 1px solid #dde1e4;
 }
-.authorization-form .authorization-info .social-contact .social-icon svg path {
+.authorization__form .authorization__social-contact .authorization__social-icon svg path {
   fill: #000;
 }
-.authorization-form .authorization-info .social-contact .social-icon:hover {
+.authorization__form .authorization__social-contact .authorization__social-icon:hover {
   border: 1px solid #353535;
   transition: 0.3s ease-out;
 }
-.authorization-form .authorization-info .social-contact .social-icon:hover svg path {
+.authorization__form .authorization__social-contact .authorization__social-icon:hover svg path {
   fill: #353535;
 }
-.authorization-form .authorization-info .divider {
+.authorization__form .authorization__divider {
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.authorization-form .authorization-info .divider::before, .authorization-form .authorization-info .divider::after {
+.authorization__form .authorization__divider::before, .authorization__form .authorization__divider::after {
   content: "";
   display: inline-block;
   width: 100%;
   border-top: 1px solid #7b818e;
 }
-.authorization-form .authorization-info .divider-text {
+.authorization__form .authorization__divider-text {
   font-weight: bold;
   color: #7b818e;
   font-size: 12px;
   font-weight: 400;
   margin: 0 15px;
 }
-.authorization-form .authorization-info .input-wrapper {
+.authorization__form .authorization__input-wrapper {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   text-align: left;
   margin-top: 20px;
 }
-.authorization-form .authorization-info .input-wrapper label {
+.authorization__form .authorization__input-wrapper label {
   font-size: 12px;
   width: 100%;
   height: 15px;
   font-weight: 600;
   margin-bottom: 7px;
 }
-.authorization-form .authorization-info .input-wrapper .input {
+.authorization__form .authorization__input-wrapper .input {
   width: 100%;
   height: 30px;
   border-radius: 30px;
@@ -144,10 +143,7 @@ body {
   font-weight: 500;
   transition: color 0.3s ease;
 }
-.authorization-form .authorization-info .input-wrapper.password-input {
-  position: relative;
-}
-.authorization-form .authorization-info .input-wrapper.password-input .password-eye-btn {
+.authorization__form .authorization__input-wrapper .password-eye-btn {
   position: absolute;
   top: 23px;
   right: 15px;
@@ -158,15 +154,15 @@ body {
   border: none;
   cursor: pointer;
 }
-.authorization-form .authorization-info .input-wrapper.password-input .password-eye-btn .password-eye-icon {
+.authorization__form .authorization__input-wrapper .password-eye-btn .password-eye-icon {
   fill: #696969;
   width: 18px;
   height: 18px;
 }
-.authorization-form .authorization-info .input-wrapper.password-input .password-eye-btn .password-eye-icon:hover {
-  background-image: red;
+.authorization__form .authorization__input-wrapper .password-eye-btn:hover {
+  fill: #7b818e;
 }
-.authorization-form .authorization-info .sign-in__btn {
+.authorization__sign-in-btn {
   margin-top: 20px;
   border: none;
   outline: none;
@@ -178,34 +174,21 @@ body {
   font-weight: 600;
   cursor: pointer;
 }
-.authorization-form .authorization-info .sign-in__btn:hover {
+.authorization__sign-in-btn:hover {
   background: #fbc400;
   color: #000;
   transition: 0.3s ease-out;
 }
-
-.image-block {
-  padding: 15px;
-  width: 460px;
-  height: 640px;
-  border-radius: 20px;
-}
-@media (max-width: 900px) {
-  .image-block {
-    display: none;
-  }
-}
-
-.forgot-password {
+.authorization__forgot-password {
   margin-top: 20px;
 }
-.forgot-password a {
+.authorization__forgot-password a {
   position: relative;
   color: #000;
   text-decoration: none;
   font-weight: 600;
 }
-.forgot-password a::after {
+.authorization__forgot-password a::after {
   content: "";
   position: absolute;
   bottom: -5px;
@@ -217,7 +200,18 @@ body {
   transform: scaleX(0);
   transform-origin: bottom right;
 }
-.forgot-password a:hover::after, .forgot-password a:focus::after {
+.authorization__forgot-password a:hover::after, .authorization__forgot-password a:focus::after {
   transform: scaleX(1);
   transform-origin: bottom left;
+}
+.authorization__image-block {
+  padding: 15px;
+  width: 460px;
+  height: 640px;
+  border-radius: 20px;
+}
+@media (max-width: 900px) {
+  .authorization__image-block {
+    display: none;
+  }
 }/*# sourceMappingURL=style.css.map */
