--- a/styles/style.scss
+++ b/styles/style.scss
@@ -178,8 +178,8 @@ body {
           height: 18px;
         }
         &:hover {
+          transition: 0.3s ease-out;
           fill: #7b818e;
-          // background: red;
         }
       }
     }
