--- a/styles/style.scss
+++ b/styles/style.scss
@@ -171,6 +171,8 @@ body {
         background: none;
         border: none;
         cursor: pointer;
+        filter: invert(65%) sepia(75%);
+        transition: 0.3s ease-out;
 
         .password-eye-icon {
           fill: #696969;
@@ -178,8 +180,7 @@ body {
           height: 18px;
         }
         &:hover {
-          transition: 0.3s ease-out;
-          fill: #7b818e;
+          filter: invert(0%) sepia(0%);
         }
       }
     }
